--- a/ElectromorphWebsite/index.html
+++ b/ElectromorphWebsite/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Hello!</title>
+<title>Coming Soon</title>
 <link href="tools/style.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="tools/jquery.min.js"></script> 
 <script type="text/javascript" src="tools/cufon-yui.js"></script>
@@ -17,7 +17,7 @@
 <body>
 <div class="header">
 	<div class="header_main">
-		<a class="logo" href="#">electromorph</a>
+		<a class="logo" href="#">maxdavies.com</a>
 		<ul class="social">
 			<li class="facebook"><a href="#">Facebook</a></li>
 			<li class="twitter"><a href="#">Twitter</a></li>
@@ -30,12 +30,13 @@
 <div class="clear"></div>
 <div class="main">
 	<div class="main_content">
-		<p>Not much to look at here really.  This is a private site.</p>
+		<p>Welcome to this astonishing new website.  Better than good, it's fantastic, and it's got content that will astound and enthrall, leaving you thrilled, enchanted, overwhelmed and gasping for breath!  Well no, not really - it's a private site.</p>
 		<p class="bolder">Anyway, click below if you know who I am and want to get in touch.</p>
 	</div>
+	
 	<div class="form">
 		<div class="field_content">
-			<p>get in touch</p><span>}</span>
+			<p>subscribe to further updates</p><span>}</span>
 			<input class="field" type="text" value="Enter Your Email Address" onfocus="if(this.value=='Enter Your Email Address') this.value='';" onblur="if(this.value=='' || this.value==' ') this.value='Enter Your Email Address';" />
 		</div>
 		<input class="submit" type="button" value="submit" />
